--- a/package.json
+++ b/package.json
@@ -11,36 +11,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-material-extensions/password-strength": "3.5.3",
-    "@angular/animations": "^7.2.10",
-    "@angular/cdk": "^7.3.5",
-    "@angular/common": "~7.2.10",
-    "@angular/compiler": "~7.2.10",
-    "@angular/core": "~7.2.10",
+    "@angular-material-extensions/password-strength": "3.6.1",
+    "@angular/animations": "^7.2.13",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "~7.2.13",
+    "@angular/compiler": "~7.2.13",
+    "@angular/core": "^7.2.13",
     "@angular/fire": "^5.1.2",
     "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "~7.2.10",
-    "@angular/material": "^7.3.5",
-    "@angular/platform-browser": "~7.2.10",
-    "@angular/platform-browser-dynamic": "~7.2.10",
-    "@angular/router": "~7.2.10",
+    "@angular/forms": "~7.2.13",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "~7.2.13",
+    "@angular/platform-browser-dynamic": "~7.2.13",
+    "@angular/router": "~7.2.13",
     "core-js": "^2.6.5",
-    "firebase": "^5.9.1",
+    "firebase": "^5.10.0",
     "hammerjs": "^2.0.8",
-    "ngx-auth-firebaseui": "^2.5.2",
+    "ngx-auth-firebaseui": "^2.6.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.6",
-    "@angular/cli": "~7.3.6",
-    "@angular/compiler-cli": "~7.2.10",
-    "@angular/language-service": "~7.2.10",
-    "@types/node": "~8.9.4",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "~7.2.13",
+    "@angular/language-service": "~7.2.13",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
