--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+.firebase/hosting.ZGlzdFx3ZWF0aGVyLWRhc2hib2FyZA.cache
+.firebase/hosting.ZGlzdFx3ZWF0aGVyLWRhc2hib2FyZA.cache
