--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-dashboard",
+  "name": "avalon-dashboard",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-material-extensions/password-strength": "3.6.1",
+    "@angular-material-extensions/password-strength": "^3.6.1",
     "@angular/animations": "^8.0.0",
     "@angular/cdk": "^8.0.0",
     "@angular/common": "~8.0.0",
@@ -25,7 +25,7 @@
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "core-js": "^2.6.5",
-    "firebase": "^5.10.0",
+    "firebase": "^6.1.0",
     "hammerjs": "^2.0.8",
     "ngx-auth-firebaseui": "^2.7.2",
     "rxjs": "~6.5.2",
@@ -33,7 +33,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular-devkit/build-angular": "~0.800.1",
     "@angular/cli": "^8.0.1",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
