--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "avalon-dashboard",
-  "version": "0.0.0",
+  "version": "1.0.0-beta",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
