--- a/package.json
+++ b/package.json
@@ -12,35 +12,35 @@
   "private": true,
   "dependencies": {
     "@angular-material-extensions/password-strength": "^8.2.1",
-    "@angular/animations": "^8.0.0",
+    "@angular/animations": "^9.1.13",
     "@angular/cdk": "^8.0.0",
-    "@angular/common": "~8.0.0",
-    "@angular/compiler": "~8.0.0",
-    "@angular/core": "^8.0.0",
+    "@angular/common": "~9.1.13",
+    "@angular/compiler": "~9.1.13",
+    "@angular/core": "^9.1.13",
     "@angular/fire": "^6.1.5",
     "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "~8.0.0",
+    "@angular/forms": "~9.1.13",
     "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "~8.0.0",
-    "@angular/platform-browser-dynamic": "~8.0.0",
-    "@angular/router": "~8.0.0",
+    "@angular/platform-browser": "~9.1.13",
+    "@angular/platform-browser-dynamic": "~9.1.13",
+    "@angular/router": "~9.1.13",
     "core-js": "^3.1.3",
     "firebase": "^6.1.1",
     "hammerjs": "^2.0.8",
     "ngx-auth-firebaseui": "^5.3.0",
     "rxjs": "~6.5.2",
-    "tslib": "^1.9.3",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.1",
-    "@angular/cli": "^8.0.1",
-    "@angular/compiler-cli": "~8.0.0",
-    "@angular/language-service": "~8.0.0",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/cli": "^9.1.15",
+    "@angular/compiler-cli": "~9.1.13",
+    "@angular/language-service": "~9.1.13",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
@@ -53,6 +53,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "typescript": "~3.8.3"
   }
 }
